Mobile stylings applied for header and Footer
positioning and sizes created for header, nav bar still needs to sync with hamburger
positioning and sizes done for the footer

--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -44,6 +44,11 @@
         font-family: 'Tangerine', cursive;
     }
 
+
+    .SPH_Text {
+        font-size: clamp(.7rem, 1.8vw, 1.2rem);
+    }
+
 }
 
 @layer components {
